# Trabalho_Final_CG

./: README.md  anotacoes.txt  index.html  package-lock.json  package.json  vite.config.ts
app/src/: main.rs  pipeline.rs
app/src/pipeline/: types.rs
app_nativo/: Cargo.toml  readme
app_nativo/src/: main.rs  pipeline.rs  utils.rs
app_nativo/src/pipeline/: types.rs
motor/: Cargo.toml  readme
motor/src/: lib.rs  pipeline.rs
pipeline/: Cargo.toml  rascunho.txt  readme
pipeline/src/: main.rs
src/: App.tsx  main.rs  pipeline.rs
src/pipeline/: types.rs
