[package]
name = "motor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Compila para biblioteca dinâmica (.wasm)

[dependencies]
wasm-bindgen = "0.2"
nalgebra = "0.32"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "console", # Para debug no browser
]